# Gato-X

./: CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml  hall-of-fame-addition.md  hall-of-fame-addition.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bump_version.yaml  gh-pages.yml  integration.yaml  integration_fork.yml  integration_sh.yaml  publish_release.yaml  pypi_publish.yml  pytest.yaml
docs/: README.md  SUMMARY.md  quick-start.md
docs/advanced/: index.md
docs/command-reference/: enumerate.md
docs/contribution-guide/: architecture.md  contributions.md  design.md  new-features.md  testing.md
docs/use-cases/: runner-takeover.md  scanning.md
docs/user-guide/: installation.md
gato/caching/: __init__.py  cache_manager.py
gato/cli/: __init__.py  cli.py  output.py
gato/configuration/: __init__.py  configuration_manager.py  notifications.json  workflow_parsing.json
gato/enumerate/: enumerate.py  recommender.py  repository.py
gato/github/: api.py  gql_queries.py
gato/models/: __init__.py  repository.py  workflow.py
gato/notifications/: __init__.py  send_webhook.py
gato/workflow_parser/: __init__.py  composite_parser.py  expression_analyzer.py  utility.py  workflow_parser.py
gatox/: main.py
gatox/attack/: attack.py  cicd_attack.py  utilities.py
gatox/caching/: cache_manager.py  local_cache_manager.py
gatox/cli/: app_enum.py  (+3 more)
test/: creds.json  integration_utils.py  runner_helper.py  test_cases.json  test_enumeration.py  test_help.py
unit_test/: conftest.py  test_api.py  test_app_enum.py  test_attack.py  test_cache_manager.py  test_cli.py  test_composite_parser.py  test_enumerate.py  test_expression_parser.py  test_git.py  test_ingest.py  test_ingest_non_default.py  test_main.py  test_org_enumerate.py  test_payloads.py  test_pwn_template.py  test_repo_enumerate.py  test_reports.py  test_runner_attack.py  test_save_workflow.py  test_search.py  test_secrets_attack.py  test_utility.py  test_webshell.py  test_workflow_parser.py  utils.py
(+130 files in other folders)
